--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,79 +4,45 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
-
-main {
+html, body{
+    background-color: purple;
     height: 100vh;
     width: 100vw;
-    background-image: linear-gradient( to top, rgb(0, 68, 255) ,rgb(60, 0, 128));
-    display: flex;
-    justify-content: center;
-    align-items: center
 }
 
-section {
-    background-color: rgba(207, 207, 207, 0.808);
-    border-radius: 20px;
-    justify-content: center;
-    align-items: center;
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    background-color: white;
+    width: 250px;
     height: 500px;
-    width: 600px;
-    display: flex;
-}
-
-img{
-    background-color: aqua;
-    border-radius: 20px 0px 0px 20px;
-    height: 504px;
-    width: 300px;
-
-}
-
-div#formulario{
-    background-color: blueviolet;
-    height: 500px;
-    width: 390px;
-    border-radius: 0px 20px 20px 0px;
-    color: white;
-    padding:20px;
-}
-
-h1 {
-    text-align: center;
-    font-size: 2.7em;
-    padding: 40px;
-}
-
-p{
-    text-align: center;
-    font-size: 1.2em;
-    padding-bottom: 30px;
-}
-
-input#enter{
-    width: 260px;
-    background-color: rgba(0, 38, 255, 0.719);
-    color: white;
-    font-size: 1.7em;
     border-radius: 20px;
-    padding: 5px;
-    margin-top: 50px;
-    text-align: center;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.479);
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.712);
 }
 
-a{
-    width: 260px;
-    background-color: rgba(0, 38, 255, 0.719);
-    color: white;
-    font-size: 1.7em;
-    border-radius: 20px;
-    text-decoration: none;
+section#login > div#imagem {
     display: block;
-    padding: 5px;
-    margin: 5px;
-    text-align: center;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.479);
+    background-image: skyblue url(../imagens/fundo.jpg) no-repeat;
+    background-size: cover;
+    background-position: left bottom;
+    height: 200px;
 }
+
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
+
