--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,13 +7,13 @@
     box-sizing: border-box;
 }
 
-html, body{
-    background-color: purple;
-    height: 100vh;
+body, html { 
     width: 100vw;
+    height: 100vh;
+    background-color: rgba(101, 1, 158, 0.651);
 }
 
-main {
+main{
     position: relative;
     height: 100vh;
     width: 100vw;
@@ -28,16 +28,19 @@ section#login {
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.712);
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.671);
+
+    transition: width .3, height .3;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
-    background-image: skyblue url(../imagens/fundo.jpg) no-repeat;
+    background: purple url(../imagens/fundo.jpg) no-repeat;
+    background-position: center right;
     background-size: cover;
-    background-position: left bottom;
     height: 200px;
 }
 
@@ -46,3 +49,81 @@ section#login > div#formulario {
     padding: 10px;
 }
 
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: rgb(127, 13, 180);
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    color: white;
+    font-size: 1em;
+    width: 40px;
+    padding: 7px;
+}
+
+label#log {
+    padding-right: 14px;
+}
+
+div.campo > input {
+    font-size: 1em;
+    height: 99%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 14px;
+    width: calc(100% - 70px);
+    
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: rgba(29, 218, 231, 0.829);
+    color: white;
+    border: none;
+    border-radius: 5px;
+
+}
+
+form > input[type=submit]:hover {
+    background-color: rgb(0, 255, 255);
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 10px;
+    margin-top: 5px;
+    color: rgba(29, 218, 231, 0.829);
+    background-color: white;
+    border: 1px solid aqua;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+form > a.botao:hover {
+    background-color: aqua;
+    color: white;
+}
+
+form > a.botao > i {
+    font-size: 0.8em;
+}
